<resources>
    <string name="app_name">瞳康视训仪</string>
    <string name="password">密    码</string>
    <string name="your_password">密    码</string>
    <string name="account">用户名</string>
    <string name="your_account">用户名</string>
    <string name="rememberPass">记住密码</string>

    <string name="back">返回</string>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>

    <string name="error_bluetooth_not_supported">设备不支持蓝牙</string>

    <!--注册页面-->
    <string name="pull_to_refresh_pull_label">向下拖动刷新</string>
    <string name="string_update_time">最后更新：%s</string>
    <string name="string_refreshing">扫描蓝牙中…</string>
    <string name="scan_over">扫描結束</string>
    <string name="release_to_refresh_pull_label">松开立即刷新</string>
    <string name="loading_error">点击加载</string>
    <string name="loading_wait">正在获取更多…</string>
    <string name="click_for_loading_more">点击加载更多</string>
    <string name="all_has_show">已显示全部内容</string>

    <string name="list_click">点击屏幕,重新加载</string>
    <string name="list_empty">暂无数据</string>

    <string name="devices">设备列表</string>

    <string name="connecting">正在连接</string>
    <string name="ble_not_supported">设备不支持蓝牙</string>


</resources>
